dev: populate images with url when retrieving specific post
